# py-api-starter

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: auth.py  items.py
app/services/: payments.py  tasks.py
migrations/: env.py
migrations/versions/: 1628aa8e2435_initial_migration.py
notebooks/: exploration.ipynb
scripts/: dev.sh  lint.sh  test.sh
tests/: test_auth.py  test_main.py
